--- a/src/configuration/CMakeLists.txt
+++ b/src/configuration/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-add_library(configuration-static STATIC
+add_library(configuration-static 
     "${CMAKE_CURRENT_SOURCE_DIR}/procmon_configuration.cpp"
 )
