--- a/src/tracer/ebpf/CMakeLists.txt
+++ b/src/tracer/ebpf/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-target_sources(tracer-static PRIVATE
+target_sources(tracer-lib PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/ebpf_tracer_engine.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/raw_ebpf_event.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/syscall_schema.cpp"
