--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(common-static STATIC
+add_library(common-lib 
     "${CMAKE_CURRENT_SOURCE_DIR}/printable.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/cli_utils.cpp"
 )
