--- a/src/storage/CMakeLists.txt
+++ b/src/storage/CMakeLists.txt
@@ -1,22 +1,22 @@
 
-add_library(storage-static STATIC
+add_library(storage-lib 
     "${CMAKE_CURRENT_SOURCE_DIR}/mock_storage_engine.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/sqlite3_storage_engine.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/storage_proxy.cpp"
 )
 
-target_link_libraries(
-    storage-static
-    sqlite3-static
-)
+# target_link_libraries(
+#     storage-lib
+#     sqlite3-static
+# )
 
 # Create test target for sqlite3 storage engine.
-add_executable(test-sqlite3-storage "${CMAKE_CURRENT_SOURCE_DIR}/test_sqlite3_storage_engine.cpp")
-target_link_libraries(
-    test-sqlite3-storage
-    storage-static
-    logging-static
-    Catch2
-)
+# add_executable(test-sqlite3-storage "${CMAKE_CURRENT_SOURCE_DIR}/test_sqlite3_storage_engine.cpp")
+# target_link_libraries(
+#     test-sqlite3-storage
+#     storage-lib
+#     logging-lib
+#     Catch2
+# )
 
 add_test(NAME test-procmon-sqlite3-storage COMMAND test-sqlite3-storage)
