--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,5 +1,7 @@
 
-add_library(common-lib 
+add_library(common-lib STATIC
     "${CMAKE_CURRENT_SOURCE_DIR}/printable.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/cli_utils.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/event_formatter.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/kill_event_formatter.cpp"
 )
