--- a/src/display/CMakeLists.txt
+++ b/src/display/CMakeLists.txt
@@ -1,8 +1,6 @@
 
-add_library(display-lib 
+add_library(display-lib STATIC
     "${CMAKE_CURRENT_SOURCE_DIR}/screen.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/column.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/event_formatter.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/kill_event_formatter.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/headless.cpp"
 )
